# RustSIEM-CyberSecurity

./: .gitignore  .railwayignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.railway  LICENSE  README.md  README_COMPILACION.md  check_compilation.sh  nixpacks.toml  railway.toml  rust-toolchain.toml  start.sh
config/: config.yaml
rules/: detection_rules.yaml
src/: lib.rs  main.rs
src/alerting/: console.rs  email.rs  manager.rs  mod.rs  webhook.rs
src/dashboard/: mod.rs  reports.rs  routes.rs  server.rs  websocket.rs
src/dashboard/static/: index.html  script.js  style.css
src/detector/: anomaly_ml.rs  brute_force.rs  engine.rs  mod.rs  sql_injection.rs  threat_hunting.rs  xss.rs
src/parser/: apache.rs  common.rs  mod.rs  nginx.rs  ssh.rs
src/simulator/: mod.rs
src/storage/: manager.rs  memory.rs  mod.rs  sqlite.rs
