[package]
name = "rust_siem"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre <tu@email.com>"]
description = "Un SIEM básico construido en Rust para aprendizaje de ciberseguridad"
license = "MIT"

[dependencies]
# Framework web y async
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_regex = "1.1"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Base de datos
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Fechas y tiempo
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Email - CONFIGURACIÓN CORREGIDA
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }

# Regex
regex = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# URL parsing
url = "2.0"
urlencoding = "2.1"

# HTML/Text processing
html-escape = "0.2"

# Machine Learning
smartcore = "0.4"
ndarray = "0.15"

# Concurrent collections
once_cell = "1.0"

# Color output
colored = "2.0"

# Websockets
tokio-tungstenite = "0.20"

# Additional utilities
futures-util = "0.3"
futures = "0.3"
rand = "0.8"
tempfile = "3.0"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Logging subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

